<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_favorite_food"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <CheckBox
                android:id="@+id/cake"
                android:layout_width="114dp"
                android:layout_height="wrap_content"
                android:text="@string/cake" />

            <CheckBox
                android:id="@+id/steak"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/steak" />

            <CheckBox
                android:id="@+id/coffee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coffee" />

            <CheckBox
                android:id="@+id/tea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tea" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/choose"
                android:layout_width="77dp"
                android:layout_height="wrap_content"
                android:text="@string/choose"
                android:onClick="selected"
                />
        </TableRow>

    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>